--- a/index.html
+++ b/index.html
@@ -1,8 +1,74 @@
-<title>Ehsan Rajabi</title>
+<html>
 <head>
+<title>Coming Soon!</title>
+<style>
+body {
+  background-image: url('construction.jpg');
+  background-size: cover; 
+  background-repeat: no-repeat;
+  font-family: Arial, sans-serif;
+  color: #333;
+  text-align: center;
+}
+
+h1 {
+  font-size: 48px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+p {
+  font-size: 24px;
+  margin: 30px 0;
+}
+
+#countdown {
+  font-size: 72px;
+  margin: 50px 0;
+}
+
+</style>
 </head>
 <body>
-<h1>Ehsan Rajabir</h1>
-<div>This is a test</div>
+
+<h1>Site Under Construction</h1>
+
+<p id="message">We're working hard to deliver an awesome new website!</p>
+
+<div id="countdown"></div>
+
+<p>Please check back soon...</p>
+
+<script>
+// Countdown timer
+const countdown = document.getElementById("countdown");
+const launchDate = new Date("March 1, 2023 00:00:00").getTime();
+
+setInterval(function() {
+
+  const now = new Date().getTime();
+  const diff = launchDate - now;
+
+  const days = Math.floor(diff / (1000 * 60 * 60 * 24));
+  const hours = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  const minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
+  const seconds = Math.floor((diff % (1000 * 60)) / 1000);
+
+  countdown.innerHTML = `
+  ${days} days 
+  ${hours < 10 ? "0" : ""}${hours} hours
+  ${minutes < 10 ? "0" : ""}${minutes} minutes 
+  ${seconds < 10 ? "0" : ""}${seconds} seconds
+  `;
+  
+  if (diff < 0) {
+    clearInterval(timer);
+    countdown.innerHTML = "Site Launched!";
+    message.innerHTML = "Our new website is now live, thanks for your patience!";
+  }
+}, 1000);
+</script>
+
 </body>
 </html>
