--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         <p>We're working hard to create something innovative and exciting for you. Stay tuned!</p>
         <div class="social-links">
             <!-- Add your social media links here -->
-            <a href="https://twitter.com/yourprofile">Twitter</a> |
-            <a href="https://facebook.com/yourprofile">Facebook</a> |
-            <a href="https://instagram.com/yourprofile">Instagram</a>
+            <a href="https://www.linkedin.com/in/ehsan-rajabi-safari/">Linkedin</a>
         </div>
     </div>
 </body>
