--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Our Website is Coming Soon</h1>
+        <h1>My Website is Coming Soon</h1>
         <div class="loader-container">
             <div class="loader"></div>
         </div>
-        <p>We're working hard to create something innovative and exciting for you. Stay tuned!</p>
+        <p>I'm working hard to create something innovative and exciting for you. Stay tuned!</p>
         <div class="social-links">
             <!-- Add your social media links here -->
             <a href="https://www.linkedin.com/in/ehsan-rajabi-safari/">Linkedin</a>
